--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <meta property="og:url" content="https://mohammadne.me/" />
   <meta property="og:title" content="MohammadNE" />
   <meta property="og:description" content="Portfolio developed by MohammadNE" />
-  <meta property="og:image" content="https://mohammadne.me/sat-naing-terminal-og.png" />
+  <meta property="og:image" content="https://mohammadne.me/mohammadne-og.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://mohammadne.me/" />
   <meta property="twitter:title" content="MohammadNE" />
   <meta property="twitter:description" content="Portfolio developed by MohammadNE" />
-  <meta property="twitter:image" content="https://mohammadne.me/sat-naing-terminal-og.png" />
+  <meta property="twitter:image" content="https://mohammadne.me/mohammadne-og.jpg" />
 
   <!-- Favicons and assets -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
